--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -72,6 +72,9 @@
   .feature-item {
     flex: 1;
     padding: 2.5rem;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
   
   .feature-item-title {
@@ -104,4 +107,8 @@
   
   .sign-in-icon {
     font-size: 5rem;
+  }
+
+  div {
+    display: flex;
   }
