--- a/src/pages/UserDashboard/UserDashboard.css
+++ b/src/pages/UserDashboard/UserDashboard.css
@@ -1,3 +1,13 @@
+.main {
+  display: flex;
+  flex-direction: column;
+}
+
+.edit-card {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
 .account {
   display: flex;
   justify-content: space-between;
@@ -41,11 +51,20 @@
   color: #fff;
   font-weight: bold;
   padding: 10px;
+  margin: 0 3rem;
+  cursor: pointer;
 }
 
 .header {
   color: #fff;
   margin-bottom: 2rem;
+}
+
+.header h1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .transaction-button {
@@ -58,6 +77,39 @@
   border-color: #00bc77;
   background-color: #00bc77;
   color: #fff;
+}
+
+.edit-section {
+  display: flex;
+  gap: 1rem;
+}
+
+.edit-section input {
+  background-color: #fff;
+  padding: 0.3rem;
+}
+
+.left-elts {
+  align-items: flex-end;
+}
+
+.right-elts {
+  align-items: flex-start;
+}
+
+.edit-elts {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+}
+
+.cancel-button,
+.save-button {
+  padding: 0.5rem 1rem;
+  border: 1px black solid;
+  background-color: #fff;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 @media (min-width: 720px) {
